<resources>
    <string name="app_name">Positive Plasma</string>
    <string name="logo">positive plasma logo</string>
    <string name="enter">Enter Data</string>
    <string name="reports">View Reports</string>
    <string name="glucose">glucose</string>
    <string name="insulin">insulin</string>
    <string name="carbs">carbs</string>
    <string name="activity">activity</string>
    <string name="submit">submit</string>
    <string name="cancel">cancel</string>
    <string name="glucose_header">Glucose</string>
    <string name="insulin_header">Insulin</string>
    <string name="carbs_header">Carbs</string>

    <string name="title1">Date</string>
    <string name="title2">Time</string>
    <string name="title3">Glucose</string>
    <string name="deleteAll">Delete All</string>
    <string name="upload">Upload Data</string>
    <string name="enter_data">Enter Data</string>
    <string name="enter_glucose_meas">Enter a new glucose measurement</string>
    <string name="enter_insulin_units">Enter the units of insulin taken</string>
    <string name="enter_carbs">Enter Number of Carbs </string>
    <string name="activityHeader">Activity</string>
    <string name="durationHeader">Duration</string>
    <string name="date_time">Date / Time</string>
    <string name="enter_activity">Enter the name of the activity</string>
    <string name="enter_duration">Enter the duration in hours</string>
    <string name="home">HOME</string>
</resources>
