<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tanona.bill.positiveplasma.MainActivity"
    android:clickable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glucose"
        android:id="@+id/log_glucose_btn"
        android:layout_below="@+id/textView"
        android:layout_toStartOf="@+id/textView"
        android:onClick="logGlucose"
        android:nestedScrollingEnabled="false" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insulin"
        android:id="@+id/log_insulin_btn"
        android:layout_above="@+id/logCarbs"
        android:layout_alignStart="@+id/button4"
        android:nestedScrollingEnabled="false"
        android:onClick="logInsulin" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carbs"
        android:id="@+id/logCarbs"
        android:layout_below="@+id/log_glucose_btn"
        android:layout_alignStart="@+id/log_glucose_btn"
        android:onClick="logCarbs" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity"
        android:id="@+id/button4"
        android:layout_alignTop="@+id/logCarbs"
        android:layout_toEndOf="@+id/textView" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/plus_blood"
        android:layout_below="@+id/view_carb_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/reports"
        android:id="@+id/textView2"
        android:layout_below="@+id/logCarbs"
        android:layout_toEndOf="@+id/logCarbs" />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glucose"
        android:id="@+id/view_gluc_btn"
        android:onClick="viewGlucseLogs"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/view_carb_btn" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insulin"
        android:id="@+id/view_ins_btn"
        android:layout_alignTop="@+id/view_gluc_btn"
        android:layout_alignStart="@+id/button4"
        android:layout_alignBottom="@+id/view_gluc_btn"
        android:layout_alignEnd="@+id/log_insulin_btn"
        android:onClick="viewInsulinLogs" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carbs"
        android:id="@+id/view_carb_btn"
        android:layout_below="@+id/view_gluc_btn"
        android:layout_toStartOf="@+id/textView2"
        android:onClick="viewCarbLogs" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity"
        android:id="@+id/view_act_btn"
        android:layout_below="@+id/view_ins_btn"
        android:layout_alignStart="@+id/view_ins_btn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:id="@+id/goto_upload_btn"
        android:layout_below="@+id/view_carb_btn"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
