<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tanona.bill.positiveplasma.ViewCarbDataActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deleteAll"
                android:id="@+id/deleteAllBtn"
                android:onClick="deleteCarbs" />
        </LinearLayout>

        <TableRow android:layout_height="wrap_content"
            android:layout_width="fill_parent">>
            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title1"
                android:id="@+id/textView"
                android:padding="3dip"
                android:textColor="#010104"
                android:layout_weight="2" />

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title2"
                android:id="@+id/textView2"
                android:padding="3dip"
                android:textColor="#020205"
                android:layout_weight="4"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/carbs_header"
                android:id="@+id/textView3"
                android:padding="3dip"
                android:textColor="#010104"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_column="4" />

        </TableRow>



    </TableLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="319dp"
        android:id="@+id/scrollView" >

        <TableLayout
            android:id="@+id/carbTable"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:shrinkColumns="*"
            android:stretchColumns="*">

        </TableLayout>
    </ScrollView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_gravity="center_horizontal"
        android:baselineAligned="false">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:id="@+id/submitBtn"
            android:layout_gravity="center_horizontal"
            android:onClick="home" />

    </LinearLayout>
</LinearLayout>