<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tanona.bill.positiveplasma.ViewActivityActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:shrinkColumns="*">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deleteAll"
                android:id="@+id/deleteAllBtn"
                android:onClick="deleteActivity" />
        </LinearLayout>

        <TableRow android:layout_height="wrap_content"
            android:layout_width="fill_parent">>
            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/date_time"
                android:id="@+id/textView"
                android:textColor="#010104"
                android:gravity="start"
                android:layout_column="1"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/activityHeader"
                android:id="@+id/textView3"
                android:textColor="#010104"
                android:gravity="start"
                android:layout_column="3"
                android:paddingLeft="0dp"
                android:layout_weight="2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/durationHeader"
                android:id="@+id/textView4"
                android:padding="3dip"
                android:textColor="#010104"
                android:layout_weight="1"
                android:gravity="end|right"
                android:layout_column="3" />

        </TableRow>


    </TableLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="351dp"
        android:id="@+id/scrollView">

        <TableLayout
            android:id="@+id/activityTable"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:shrinkColumns="*"
            android:stretchColumns="*">

        </TableLayout>
    </ScrollView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_gravity="center_horizontal"
        android:baselineAligned="false">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:id="@+id/submitBtn"
            android:layout_gravity="center_horizontal"
            android:onClick="home" />

    </LinearLayout>

</LinearLayout>